--- a/members.html
+++ b/members.html
@@ -8,7 +8,7 @@
 
     <link href="styles/style.css" rel="stylesheet" type="text/css">
 
-    <title> </title>
+    <title>Members</title>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <img class="header-img" src="images/logo2.png"></img>
 
         <div class="container">
-            <h1>KCP Literary Magazine</h1>
+             <h1 class="mm">Spotlight</h1>
         </div>
     </header>
     <nav class="navbar navbar-default">
@@ -52,7 +52,7 @@
         <div class="row">
             <div class="col-md-4 col-xs-6">
                 <div class="thumbnail" id="mem">
-                    <img class="img-responsive" src="images/mem-filler.png">
+                    <img class="img-responsive" src="images/bri.JPG">
                     <div class="caption">
 
                         <p class="name">Briana Washington</p>
@@ -65,7 +65,7 @@
             </div>
             <div class="col-md-4 col-xs-6">
                 <div class="thumbnail" id="mem">
-                    <img class="img-responsive" src="images/mem-filler2.jpg">
+                    <img class="img-responsive" src="images/marcia.jpg">
                     <div class="caption">
 
                         <p class="name">Marcia Eastmond</p>
@@ -87,9 +87,11 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-md-offset-2 col-xs-6">
+        </div>
+        <div class="row">
+            <div class="col-md-4 col-xs-6">
                 <div class="thumbnail" id="mem">
-                    <img class="img-responsive" src="images/mem-filler4.png">
+                    <img class="img-responsive" src="images/ana.JPG">
                     <div class="caption">
 
                         <p class="name">Ana Aguirre</p>
@@ -112,7 +114,22 @@
                         <p>dtownsend2@cps.edu</p>
                     </div>
                 </div>
+                </div>
+            <div class="col-md-4 col-xs-6">
+                <div class="thumbnail" id="mem">
+                    <img class="img-responsive" height="240px" src="images/liz.jpg">
+                    <div class="caption">
+                        <br>
+                        <br>
+                        <br>
+                        <p class="name">Elizabeth Watts </p>
+                        <p>Senior</p>
+                        <p></p>
+                        <p>@cps.edu</p>
+                    </div>
+                </div>
             </div>
+        </div>
 
 
 
