Committing changes to master

--- a/members.html
+++ b/members.html
@@ -87,8 +87,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="row">
             <div class="col-md-4 col-xs-6">
                 <div class="thumbnail" id="mem">
                     <img class="img-responsive" src="images/ana.JPG">
@@ -96,7 +94,7 @@
 
                         <p class="name">Ana Aguirre</p>
                         <p>Senior</p>
-                        <p>Position</p>
+                        <p>Local Psychopath</p>
                         <p>agaguirre@cps.edu</p>
                     </div>
                 </div>
@@ -123,6 +121,20 @@
                         <br>
                         <br>
                         <p class="name">Elizabeth Watts </p>
+                        <p>Senior</p>
+                        <p></p>
+                        <p>@cps.edu</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-xs-6">
+                <div class="thumbnail" id="mem">
+                    <img class="img-responsive" height="240px" src="images/nic.jpg">
+                    <div class="caption">
+                        <br>
+                        <br>
+                        <br>
+                        <p class="name">Nicole Jourdan </p>
                         <p>Senior</p>
                         <p></p>
                         <p>@cps.edu</p>
