--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   <!--Favicon For later <link rel='shortcut icon' href='favicon.ico' type='images/favicon.ico' />-->
 
+
 </head>
 
 <body>
@@ -62,7 +63,7 @@
       <!-- Wrapper for slides -->
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img src="images/filler4.jpg" alt="Chania" height="350px">
+          <img src="images/1caro.jpg" class="img-responsive" alt="Chania" height="350px">
           <div class="carousel-caption">
             <h3>Chania</h3>
             <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
@@ -70,7 +71,7 @@
         </div>
 
         <div class="item">
-          <img src="images/filler3.gif" alt="Chania" height="350px">
+          <img src="images/2caro.jpg" class="img-responsive" alt="Chania" height="350px">
           <div class="carousel-caption">
             <h3>Chania</h3>
             <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
@@ -78,7 +79,7 @@
         </div>
 
         <div class="item">
-          <img src="images/filler1.jpg" height="350px" alt="Flower">
+          <img src="images/3caro.jpg" class="img-responsive" height="350px" alt="Flower">
           <div class="carousel-caption">
             <h3>Flowers</h3>
             <p>Beatiful flowers in Kolymbari, Crete.</p>
@@ -86,7 +87,7 @@
         </div>
 
         <div class="item">
-          <img src="images/filler2.jpg" max-height="350px" alt="Flower">
+          <img src="images/4caro.jpg" class="img-responsive" image-size="relative" max-height="100px" alt="Flower">
           <div class="carousel-caption">
             <h3>Flowers</h3>
             <p>Beatiful flowers in Kolymbari, Crete.</p>
