Committing changes to master

--- a/index.html
+++ b/index.html
@@ -65,16 +65,16 @@
         <div class="item active">
           <img src="images/1caro.jpg" class="img-responsive" alt="Chania" height="350px">
           <div class="carousel-caption">
-            <h3>Chania</h3>
-            <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+            <h3>Fall of Humanity</h3>
+            <p>Kai Bratton</p>
           </div>
         </div>
 
         <div class="item">
           <img src="images/2caro.jpg" class="img-responsive" alt="Chania" height="350px">
           <div class="carousel-caption">
-            <h3>Chania</h3>
-            <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+            <h3>Apocalypse</h3>
+            <p></p>
           </div>
         </div>
 
