--- a/submissions.html
+++ b/submissions.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html>
-    <head>
+
+<head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
 
   <link href="styles/style.css" rel="stylesheet" type="text/css">
 
-        <title> </title>
-    </head>
-    <body>
-              <header>
-              <img class="header-img" src="images/logo2.png"></img>
-    
-      <div class="container">
+  <title> </title>
+</head>
+
+<body>
+  <header>
+    <img class="header-img" src="images/logo2.png"></img>
+
+    <div class="container">
       <h1>KCP Literary Magazine</h1>
-      </div>
-    </header>  
-     <nav class="navbar navbar-default">
+    </div>
+  </header>
+  <nav class="navbar navbar-default">
 
     <div class="container">
       <div class="navbar-header">
@@ -31,7 +33,7 @@
 
 
 
-        <a class="navbar-brand" href="index.html"><img class="logo" src="images/#"class="img-responsive"></a>
+        <a class="navbar-brand" href="index.html"><img class="logo" src="images/#" class="img-responsive"></a>
       </div>
 
       <div class="collapse navbar-collapse" id="nav-collapse">
@@ -45,13 +47,41 @@
     </div>
   </nav>
   <div class="container">
-  <h1 align="center">This Month's Theme</h1>
-  <h2 align="center">Fall Of Humanity</h2>
+    <h1 align="center">This Month's Theme</h1>
+    <h2 align="center">Fall Of Humanity</h2>
+
+
+
+
+
+    <div class="col-md-4 col-xs-6">
+      <a target="_blank" class="link" href="https://docs.google.com/document/d/1xxZ6aOQITWabfPlEHbwl_dai90tvHFoQGyR4V96Fi_Y/edit">
+        <div class="thumbnail" id="mem" style="background-image: url(https://drive.google.com/thumbnail?id=1xxZ6aOQITWabfPlEHbwl_dai90tvHFoQGyR4V96Fi_Y&authuser=1&v=1445216500448&sz=w416);"></div>
+      </a>
+      <div class="caption">
+        <h3>Backwards Poem</h3>
+      </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   </div>
-  
-  
-  
-  
+
+
+
+
   <div class="footer">
     <div class="container" id="fot">
       <p class="pad-fot">#</p>
@@ -60,16 +90,17 @@
 
     </div>
   </div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
-    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
-    <script>
+  <script>
     $("#nav-collapse").find("a").click(function() {
       $("#nav-collapse").removeClass("in");
     });
 
     $('body').bind('touchstart', function() {});
   </script>
-    </body>
+</body>
+
 </html>
