Committing changes to master

--- a/contact-us.html
+++ b/contact-us.html
@@ -7,14 +7,14 @@
 
   <link href="styles/style.css" rel="stylesheet" type="text/css">
 
-        <title> </title>
+        <title>Contact US</title>
     </head>
     <body>
               <header>
               <img class="header-img" src="images/logo2.png"></img>
     
       <div class="container">
-      <h1>KCP Literary Magazine</h1>
+      <h1 class="mm">Spotlight</h1>
       </div>
     </header>  
      <nav class="navbar navbar-default">
