--- a/submissions.html
+++ b/submissions.html
@@ -8,7 +8,7 @@
 
   <link href="styles/style.css" rel="stylesheet" type="text/css">
 
-  <title> </title>
+  <title>Submissions</title>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
     <img class="header-img" src="images/logo2.png"></img>
 
     <div class="container">
-      <h1>KCP Literary Magazine</h1>
+      <h1 class="mm">Spotlight</h1>
     </div>
   </header>
   <nav class="navbar navbar-default">
@@ -56,27 +56,141 @@
 
     <div class="col-md-4 col-xs-6">
       <a target="_blank" class="link" href="https://docs.google.com/document/d/1xxZ6aOQITWabfPlEHbwl_dai90tvHFoQGyR4V96Fi_Y/edit">
-        <div class="thumbnail" id="mem" style="background-image: url(https://drive.google.com/thumbnail?id=1xxZ6aOQITWabfPlEHbwl_dai90tvHFoQGyR4V96Fi_Y&authuser=1&v=1445216500448&sz=w416);"></div>
+        <div class="thumbnail" id="sub" style="background-image: url(https://drive.google.com/thumbnail?id=1xxZ6aOQITWabfPlEHbwl_dai90tvHFoQGyR4V96Fi_Y&authuser=1&v=1445216500448&sz=w416);">
+        </div>
       </a>
       <div class="caption">
-        <h3>Backwards Poem</h3>
+        <h4 class="cap">Backwards Poem.</h4>
       </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    
+    <div class="col-md-4 col-xs-6">
+      <a target="_blank" class="link" href="https://docs.google.com/document/d/10l-T8PsXKgVRJhj-vE5o96j97za_mjvGtYJBxb695Uw/edit">
+        <div class="thumbnail" id="sub" style="background-image: url(https://drive.google.com/thumbnail?id=10l-T8PsXKgVRJhj-vE5o96j97za_mjvGtYJBxb695Uw&authuser=1&v=1445216500448&sz=w416);">
+        </div>
+      </a>
+      <div class="caption">
+        <h4 class="cap">Deep Love.</h4>
+      </div>
+    </div>
+    <div class="col-md-4 col-xs-6">
+      <a target="_blank" class="link" href="https://docs.google.com/document/d/16w8HzluiQJP17iGzX1FSy1bV5rmxsmqCxqXKnQGJP1w/edit">
+        <div class="thumbnail" id="sub" style="background-image: url(https://drive.google.com/thumbnail?id=16w8HzluiQJP17iGzX1FSy1bV5rmxsmqCxqXKnQGJP1w&authuser=1&v=1445216500448&sz=w416);">
+        </div>
+      </a>
+      <div class="caption">
+        <h4 class="cap">Destinee Apocalyptique.</h4>
+      </div>
+    </div>
+    <div class="col-md-4 col-xs-6">
+      <a target="_blank" class="link" href="https://docs.google.com/document/d/1-U4C-bL3AdBeRd444glx40Xfqsr0O8lrlrqmapczmHE/edit">
+        <div class="thumbnail" id="sub" style="background-image: url(https://drive.google.com/thumbnail?id=1-U4C-bL3AdBeRd444glx40Xfqsr0O8lrlrqmapczmHE&authuser=1&v=1445216500448&sz=w416);">
+        </div>
+      </a>
+      <div class="caption">
+        <h4 class="cap">I want...</h4>
+      </div>
+    </div>
+    <div class="col-md-4 col-xs-6">
+      <a target="_blank" class="link" href="https://docs.google.com/document/d/125plxj0Q5F21zxDOU-1yXD74aGHmSTscuPMzqLb528o/edit">
+        <div class="thumbnail" id="sub" style="background-image: url(https://drive.google.com/thumbnail?id=125plxj0Q5F21zxDOU-1yXD74aGHmSTscuPMzqLb528o&authuser=1&v=1445216500448&sz=w416);">
+        </div>
+      </a>
+      <div class="caption">
+        <h4 class="cap">My Culture.</h4>
+      </div>
+    </div>
+    <div class="col-md-4 col-xs-6">
+      <a target="_blank" class="link" href="https://docs.google.com/document/d/11FrRJ8Dy6YlZ7llEdMmjc4nu8cqcxrdAPZ09t8lMoYI/edit">
+        <div class="thumbnail" id="sub" style="background-image: url(https://drive.google.com/thumbnail?id=11FrRJ8Dy6YlZ7llEdMmjc4nu8cqcxrdAPZ09t8lMoYI&authuser=1&v=1445216500448&sz=w416);">
+        </div>
+      </a>
+      <div class="caption">
+        <h4 class="cap">Neighborhood Blues.</h4>
+      </div>
+    </div>
+    <div class="col-md-4 col-xs-6">
+      <a target="_blank" class="link" href="https://docs.google.com/document/d/1vckfRWHwJcDVEKgEjQnQ9FR2Lf50QhkYv4jMdf5L4oQ/edit">
+        <div class="thumbnail" id="sub" style="background-image: url(https://drive.google.com/thumbnail?id=1vckfRWHwJcDVEKgEjQnQ9FR2Lf50QhkYv4jMdf5L4oQ&authuser=1&v=1445216500448&sz=w416);">
+        </div>
+      </a>
+      <div class="caption">
+        <h4 class="cap">No Title.</h4>
+      </div>
+    </div>
+    <div class="col-md-4 col-xs-6">
+      <a target="_blank" class="link" href="https://docs.google.com/document/d/10dd1twMqhp3AXC7-9F5QaDSfrCcuY7kI0-PUDlXHw-4/edit">
+        <div class="thumbnail" id="sub" style="background-image: url(https://drive.google.com/thumbnail?id=10dd1twMqhp3AXC7-9F5QaDSfrCcuY7kI0-PUDlXHw-4&authuser=1&v=1445216500448&sz=w416);">
+        </div>
+      </a>
+      <div class="caption">
+        <h4 class="cap">Oh Brother, Only if You Knew.</h4>
+      </div>
+    </div>
+    <div class="col-md-4 col-xs-6">
+      <a target="_blank" class="link" href="https://docs.google.com/document/d/10vBUVi-PTQ5OjuA65l3WtYQxfr2YpYLBpKeRu9kucBg/edit">
+        <div class="thumbnail" id="sub" style="background-image: url(https://drive.google.com/thumbnail?id=10vBUVi-PTQ5OjuA65l3WtYQxfr2YpYLBpKeRu9kucBg&authuser=1&v=1445216500448&sz=w416);">
+        </div>
+      </a>
+      <div class="caption">
+        <h4 class="cap">Pain Game.</h4>
+      </div>
+    </div>
+    <div class="col-md-4 col-xs-6">
+      <a target="_blank" class="link" href="https://docs.google.com/document/d/10mNIbp_FYU0T8Q41_sPh73-ool5SleqpGu_JIwOejfQ/edit">
+        <div class="thumbnail" id="sub" style="background-image: url(https://drive.google.com/thumbnail?id=10mNIbp_FYU0T8Q41_sPh73-ool5SleqpGu_JIwOejfQ&authuser=1&v=1445216500448&sz=w416);">
+        </div>
+      </a>
+      <div class="caption">
+        <h4 class="cap">Penumbra.</h4>
+      </div>
+    </div>
+    <div class="col-md-4 col-xs-6">
+      <a target="_blank" class="link" href="https://docs.google.com/document/d/11IpdfrtONIUZxBWsm56Ah7GqnUxKnmBS1dL56KtJ6mQ/edit">
+        <div class="thumbnail" id="sub" style="background-image: url(https://drive.google.com/thumbnail?id=11IpdfrtONIUZxBWsm56Ah7GqnUxKnmBS1dL56KtJ6mQ&authuser=1&v=1445216500448&sz=w416);">
+        </div>
+      </a>
+      <div class="caption">
+        <h4 class="cap">Seriously who can take you Seriously.</h4>
+      </div>
+    </div>
+    <div class="col-md-4 col-xs-6">
+      <a target="_blank" class="link" href="https://docs.google.com/document/d/1hyBUYsh6CaM9Z-UsYsQ8AYv-ak1pqvvW_8twrYl2sXM/edit">
+        <div class="thumbnail" id="sub" style="background-image: url(https://drive.google.com/thumbnail?id=1hyBUYsh6CaM9Z-UsYsQ8AYv-ak1pqvvW_8twrYl2sXM&authuser=1&v=1445216500448&sz=w416);">
+        </div>
+      </a>
+      <div class="caption">
+        <h4 class="cap">Trapped Within.</h4>
+      </div>
+    </div>
+    <div class="col-md-4 col-xs-6">
+      <a target="_blank" class="link" href="https://docs.google.com/document/d/1IvBVpS4QDoA73VtDv33k03WorWHuUAPkfEKqjYgnkaM/edit">
+        <div class="thumbnail" id="sub" style="background-image: url(https://drive.google.com/thumbnail?id=1IvBVpS4QDoA73VtDv33k03WorWHuUAPkfEKqjYgnkaM&authuser=1&v=1445216500448&sz=w416);">
+        </div>
+      </a>
+      <div class="caption">
+        <h4 class="cap">Two of the same.</h4>
+      </div>
+    </div>
+    <div class="col-md-4 col-xs-6">
+      <a target="_blank" class="link" href="https://docs.google.com/document/d/1vckfRWHwJcDVEKgEjQnQ9FR2Lf50QhkYv4jMdf5L4oQ/edit">
+        <div class="thumbnail" id="sub" style="background-image: url(https://drive.google.com/thumbnail?id=1vckfRWHwJcDVEKgEjQnQ9FR2Lf50QhkYv4jMdf5L4oQ&authuser=1&v=1445216500448&sz=w416);">
+        </div>
+      </a>
+      <div class="caption">
+        <h4 class="cap">No Title</h4>
+      </div>
+    </div>
+    <div class="col-md-4 col-xs-6">
+      <a target="_blank" class="link" href="https://docs.google.com/document/d/1QkD721_CsKuOhxzUusm2HYNfbUDA1yRh97UgI5_vY9k/edit">
+        <div class="thumbnail" id="sub" style="background-image: url(https://drive.google.com/thumbnail?id=1QkD721_CsKuOhxzUusm2HYNfbUDA1yRh97UgI5_vY9k&authuser=1&v=1445216500448&sz=w416);">
+        </div>
+      </a>
+      <div class="caption">
+        <h4 class="cap">Where are we now?</h4>
+      </div>
+    </div>
+    
   </div>
 
 
