--- a/index.html
+++ b/index.html
@@ -74,23 +74,23 @@
           <img src="images/2caro.jpg" class="img-responsive" alt="Chania" height="350px">
           <div class="carousel-caption">
             <h3>Apocalypse</h3>
-            <p></p>
+            <p>Author</p>
           </div>
         </div>
 
         <div class="item">
           <img src="images/3caro.jpg" class="img-responsive" height="350px" alt="Flower">
           <div class="carousel-caption">
-            <h3>Flowers</h3>
-            <p>Beatiful flowers in Kolymbari, Crete.</p>
+            <h3>Circle of Retrograde</h3>
+            <p>Author</p>
           </div>
         </div>
 
         <div class="item">
           <img src="images/4caro.jpg" class="img-responsive" image-size="relative" max-height="100px" alt="Flower">
           <div class="carousel-caption">
-            <h3>Flowers</h3>
-            <p>Beatiful flowers in Kolymbari, Crete.</p>
+            <h3>Brave</h3>
+            <p>Author</p>
           </div>
         </div>
       </div>
@@ -107,10 +107,10 @@
     </div>
 
 
-    <h3><marquee behavior="scroll" direction="left"> Deadline and other things </marquee></h3>
+    <h3><marquee behavior="scroll" direction="left"> The Dead line for this fall has already passed and we are no longer accepting submissions. </marquee></h3>
 
     <p class="opening">Welcome to Spotlight, King College Prep's literary magazine! This is our safe haven for the creative and expressive. Spotlight publishes quarterly magazines and also illuminates other work online of short stories, poetry, drawings, and photos. Spotlight
-      was founded in May 2015 with Briana Washington as the President. Volume one was themed “Turn the Page” to accommodate the closing school year. Our school lacked an outlet for artistic visions and Spotlight was created to fill the void. Our club
+      was founded in May 2015 with Briana Washington as the President. Volume one was themed "Turn the Page" to accommodate the closing school year. <br> Our school lacked an outlet for artistic visions and Spotlight was created to fill the void. Our club
       has dove deep into existential thinking and innovative perspectives. We have created a community of creativity for students with a deep passion to express themselves. Our weekly meetings include peer editing, read alouds, web design, strategic planning,
       contests, and field trips to achieve our mission to publish young artists. </p>
 
