Committing changes to master

--- a/members.html
+++ b/members.html
@@ -101,7 +101,7 @@
             </div>
             <div class="col-md-4 col-xs-6">
                 <div class="thumbnail" id="mem">
-                    <img class="img-responsive" height="240px" src="images/mem-filler5.gif">
+                    <img class="img-responsive" height="240px" src="images/derek.JPG">
                     <div class="caption">
                         <br>
                         <br>
